Increase sidebar z-index to prevent gene overlapping when resizing.
The commmit 9ac2933 introduced the functionality but gene model has a
much higher z-index when resized. This patch takes care of that bug.

--- a/www/styles/curate.less
+++ b/www/styles/curate.less
@@ -46,7 +46,7 @@
 .sidebar {
   overflow-y: auto;
   background-color: white;
-  z-index: 10;
+  z-index: 100;
 }
 
 .sidebar > h4 {
